<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/DialogBox"
    android:padding="10dp">
    <TextView
        android:id="@+id/text_view_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_phone"
        android:layout_margin="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="sans-serif-black"/>
    <EditText
        android:id="@+id/edit_text_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number"
        android:textSize="16sp"
        android:minWidth="100dp"
        android:minHeight="48dp"
        android:theme="@style/EditTextTheme"
        app:layout_constraintStart_toStartOf="@id/text_view_insert"
        app:layout_constraintEnd_toEndOf="@id/text_view_insert"
        app:layout_constraintTop_toBottomOf="@id/text_view_insert"
        android:fontFamily="sans-serif-black"
        android:layout_margin="10dp"
        android:inputType="phone"
        android:autofillHints="phone"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_phone_number">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonTheme"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_save"
            android:theme="@style/ButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>