<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recycler_view">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:theme="@style/Toolbar"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conversations"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:layout_gravity="start" />

            <ImageButton
                android:id="@+id/help_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_baseline_help_24"
                android:layout_marginEnd="15dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="end"
                android:contentDescription="@string/help" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            tools:listitem="@layout/recyclerview_item"
            app:layoutManager="LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/newChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:borderWidth="0dp"
            android:theme="@style/FAB"
            android:src="@drawable/ic_baseline_add_24"
            app:tint="@color/gray"
            android:contentDescription="@string/create_new_chat" />
    </androidx.constraintlayout.widget.ConstraintLayout>
